--- a/FitHub/FitHub/Repository/RepositoryViewController.storyboard
+++ b/FitHub/FitHub/Repository/RepositoryViewController.storyboard
@@ -195,29 +195,29 @@ Fork</string>
             </objects>
             <point key="canvasLocation" x="-500" y="193.5960591133005"/>
         </scene>
-        <!--WatchViewController-->
+        <!--CommonUsersTableViewController-->
         <scene sceneID="4QR-Rm-iRS">
             <objects>
-                <viewControllerPlaceholder storyboardName="WatchViewController" id="awa-fc-Qsn" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardName="CommonUsersTableViewController" id="awa-fc-Qsn" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="u4G-xj-gD8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="27" y="-9"/>
+            <point key="canvasLocation" x="218" y="140"/>
         </scene>
-        <!--StarViewController-->
+        <!--CommonUsersTableViewController-->
         <scene sceneID="nLO-AG-C5B">
             <objects>
-                <viewControllerPlaceholder storyboardName="StarViewController" id="NQq-DV-8v5" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardName="CommonUsersTableViewController" id="NQq-DV-8v5" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Z7B-N0-RdQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="26" y="25"/>
+            <point key="canvasLocation" x="218" y="194"/>
         </scene>
-        <!--ForkViewController-->
+        <!--CommonReposTableViewController-->
         <scene sceneID="xJy-fG-X7B">
             <objects>
-                <viewControllerPlaceholder storyboardName="ForkViewController" id="lcK-MR-Za3" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardName="CommonReposTableViewController" id="lcK-MR-Za3" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7mi-6L-XlD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="26" y="61"/>
+            <point key="canvasLocation" x="219" y="256"/>
         </scene>
     </scenes>
 </document>
