--- a/FitHub/FitHub/User/UserDetailViewController.storyboard
+++ b/FitHub/FitHub/User/UserDetailViewController.storyboard
@@ -176,6 +176,9 @@ Following</string>
                                                 <color key="tintColor" red="0.2666666667" green="0.2666666667" blue="0.2666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <inset key="titleEdgeInsets" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                 <state key="normal" title="button" image="link"/>
+                                                <connections>
+                                                    <action selector="blogTap:" destination="wbe-Ar-haS" eventType="touchUpInside" id="ZHD-PZ-NT6"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MbL-F7-xnm">
                                                 <rect key="frame" x="10" y="180" width="355" height="30"/>
